Fri Feb 28 18:11:28 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* fmt.c (ps_fmt_squash): Deal with FIELD->spec being NULL when
	advancing over a field.

Fri Nov 15 19:14:28 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* procstat.c (proc_stat_set_flags): Allow the user fetch hook to
	turn on non-user bits, even if they've already failed in the
	standard code.

Wed Oct  9 14:20:08 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* spec.c (ps_nominal_string): New function.
	(ps_emit_args, ps_emit_string): Use `-' for empty values.
	(specs): Use ps_nominal_string for `Args' and `Arg0' fields.

Tue Oct  8 13:21:55 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* procstat.c (proc_stat_set_flags): Get rid of INAPP macro.
	Fix preconditions of PSTAT_SUSPEND_COUNT.

	* spec.c (ps_emit_seconds, ps_emit_minutes): Interpret
	PS_FMT_FIELD_COLON_MOD flag to mean `print zero as "-"'.

	* procstat.c (set_procinfo_flags): Set bits in PS->inapp as appropriate.
	(PSTAT_PROCINFO_THREAD, PSTAT_PROCINFO_TASK): New macro.
	(PSTAT_PROCINFO_TASK_THREAD_DEP): Renamed from PSTAT_PROCINFO_THREAD.
	(PSTAT_PROCINFO): Redefined.
	(count_threads): Use PSTAT_PROCINFO_TASK_THREAD_DEP.
	(proc_stat_set_flags): Don't use NEED macro for PSTAT_STATE.

Mon Oct  7 17:40:21 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* ps.h (struct ps_fmt): Add ERROR field, and rename INVAL to INAPP.
	* fmt.c (_fmt_create): Initialize INAPP & ERROR fields.
	(ps_fmt_clone): Propagate them.
	(ps_fmt_write_proc_stat): Use them.
	* procstat.c (proc_stat_set_flags): Add NEED & INAPP macros, and
	use them to set the inapp field as well as the failed field.
	(_proc_stat_create): Initialize INAPP field.
	(proc_stat_thread_create): Initialize FAILED and INAPP fields.

Sun Oct  6 18:42:52 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* ps.h (struct ps): Add INAPP field.

	* spec.c (ps_emit_wait): Correct mapping of init ports.

Mon Sep 30 23:15:42 1996  Miles Bader  <miles@gnu.ai.mit.edu>
